// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideNav (Cliff Cyberdeck rail) > snapshots the rendered SideNav with Dashboard active 1`] = `
<aside
  class="flex flex-col w-[248px] shrink-0 sticky top-0 h-screen self-start z-10"
  style="background: var(--cd-bg-1); border-right: 1px solid var(--cd-rule);"
>
  <a
    aria-current="page"
    aria-label="Cliff home"
    class="block px-[18px] pt-[18px] pb-[12px] focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)] active"
    data-discover="true"
    href="/dashboard"
    style="border-bottom: 1px solid var(--cd-rule);"
  >
    <span
      class="inline-flex items-baseline gap-[1px]"
      style="line-height: 1;"
    >
      <span
        class="font-display"
        style="font-size: 22px; font-weight: 700; letter-spacing: -0.045em; color: var(--cd-green); text-shadow: 0 0 14px var(--cd-green-glow);"
      >
        cliff
      </span>
      <span
        aria-hidden="true"
        class="cd-pulse ml-[3px]"
        style="width: 5px; height: 5px; background: var(--cd-green); box-shadow: 0 0 8px var(--cd-green);"
      />
    </span>
    <div
      style="margin-top: 6px; font-size: 11px; color: var(--cd-fg-4); line-height: 1.2;"
    >
      self-hosted security copilot
    </div>
  </a>
  <div
    class="px-[14px] pt-[14px] pb-[10px]"
  >
    <div
      class="cd-section-label cd-section-label--quiet"
      style="margin-bottom: 6px;"
    >
      Current scope
    </div>
    <button
      aria-label="Workspace: linear/billing"
      class="w-full flex items-center gap-2 px-2.5 py-2 text-left transition-colors hover:bg-cd-card-hov focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      style="background: var(--cd-card); border: 1px solid var(--cd-rule); color: var(--cd-cyan); font-family: var(--cd-mono); font-size: 11.5px; border-radius: 2px;"
      title="linear/billing"
      type="button"
    >
      <span
        data-testid="sidenav-repo-initials"
        style="color: var(--cd-fg-4);"
      >
        ::
      </span>
      <span
        class="truncate"
      >
        linear/billing
      </span>
      <span
        aria-hidden="true"
        class="material-symbols-outlined ml-auto"
        style="font-size: 14px; color: var(--cd-fg-4);"
      >
        expand_more
      </span>
    </button>
  </div>
  <nav
    aria-label="Primary"
    class="flex-1 min-h-0 overflow-y-auto px-2 flex flex-col gap-px"
  >
    <a
      aria-current="page"
      class="cd-nav cd-nav--active focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      data-discover="true"
      href="/dashboard"
    >
      <span
        aria-hidden="true"
        class="material-symbols-outlined"
        style="font-size: 15px; font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;"
      >
        space_dashboard
      </span>
      <span
        class="flex-1"
      >
        Dashboard
      </span>
    </a>
    <a
      class="cd-nav  focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      data-discover="true"
      href="/issues"
    >
      <span
        aria-hidden="true"
        class="material-symbols-outlined"
        style="font-size: 15px; font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;"
      >
        task_alt
      </span>
      <span
        class="flex-1"
      >
        Issues
      </span>
      <span
        class="font-mono font-bold"
        data-testid="sidenav-issues-badge"
        style="font-size: 10px; color: var(--cd-fg-4); text-shadow: none;"
      >
        60
      </span>
    </a>
  </nav>
  <div
    data-testid="sidenav-footer"
    style="border-top: 1px solid var(--cd-rule); padding: 6px 8px;"
  >
    <a
      class="cd-nav  focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      data-discover="true"
      href="/settings"
    >
      <span
        aria-hidden="true"
        class="material-symbols-outlined"
        style="font-size: 15px; font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;"
      >
        settings
      </span>
      <span
        class="flex-1"
      >
        Settings
      </span>
    </a>
  </div>
</aside>
`;

exports[`SideNav (Cliff Cyberdeck rail) > snapshots the rendered SideNav with Issues active 1`] = `
<aside
  class="flex flex-col w-[248px] shrink-0 sticky top-0 h-screen self-start z-10"
  style="background: var(--cd-bg-1); border-right: 1px solid var(--cd-rule);"
>
  <a
    aria-label="Cliff home"
    class="block px-[18px] pt-[18px] pb-[12px] focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
    data-discover="true"
    href="/dashboard"
    style="border-bottom: 1px solid var(--cd-rule);"
  >
    <span
      class="inline-flex items-baseline gap-[1px]"
      style="line-height: 1;"
    >
      <span
        class="font-display"
        style="font-size: 22px; font-weight: 700; letter-spacing: -0.045em; color: var(--cd-green); text-shadow: 0 0 14px var(--cd-green-glow);"
      >
        cliff
      </span>
      <span
        aria-hidden="true"
        class="cd-pulse ml-[3px]"
        style="width: 5px; height: 5px; background: var(--cd-green); box-shadow: 0 0 8px var(--cd-green);"
      />
    </span>
    <div
      style="margin-top: 6px; font-size: 11px; color: var(--cd-fg-4); line-height: 1.2;"
    >
      self-hosted security copilot
    </div>
  </a>
  <div
    class="px-[14px] pt-[14px] pb-[10px]"
  >
    <div
      class="cd-section-label cd-section-label--quiet"
      style="margin-bottom: 6px;"
    >
      Current scope
    </div>
    <button
      aria-label="Workspace: linear/billing"
      class="w-full flex items-center gap-2 px-2.5 py-2 text-left transition-colors hover:bg-cd-card-hov focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      style="background: var(--cd-card); border: 1px solid var(--cd-rule); color: var(--cd-cyan); font-family: var(--cd-mono); font-size: 11.5px; border-radius: 2px;"
      title="linear/billing"
      type="button"
    >
      <span
        data-testid="sidenav-repo-initials"
        style="color: var(--cd-fg-4);"
      >
        ::
      </span>
      <span
        class="truncate"
      >
        linear/billing
      </span>
      <span
        aria-hidden="true"
        class="material-symbols-outlined ml-auto"
        style="font-size: 14px; color: var(--cd-fg-4);"
      >
        expand_more
      </span>
    </button>
  </div>
  <nav
    aria-label="Primary"
    class="flex-1 min-h-0 overflow-y-auto px-2 flex flex-col gap-px"
  >
    <a
      class="cd-nav  focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      data-discover="true"
      href="/dashboard"
    >
      <span
        aria-hidden="true"
        class="material-symbols-outlined"
        style="font-size: 15px; font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;"
      >
        space_dashboard
      </span>
      <span
        class="flex-1"
      >
        Dashboard
      </span>
    </a>
    <a
      aria-current="page"
      class="cd-nav cd-nav--active focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      data-discover="true"
      href="/issues"
    >
      <span
        aria-hidden="true"
        class="material-symbols-outlined"
        style="font-size: 15px; font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;"
      >
        task_alt
      </span>
      <span
        class="flex-1"
      >
        Issues
      </span>
      <span
        class="font-mono font-bold"
        data-testid="sidenav-issues-badge"
        style="font-size: 10px; color: var(--cd-green); text-shadow: 0 0 6px var(--cd-green-glow);"
      >
        60
      </span>
    </a>
  </nav>
  <div
    data-testid="sidenav-footer"
    style="border-top: 1px solid var(--cd-rule); padding: 6px 8px;"
  >
    <a
      class="cd-nav  focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      data-discover="true"
      href="/settings"
    >
      <span
        aria-hidden="true"
        class="material-symbols-outlined"
        style="font-size: 15px; font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;"
      >
        settings
      </span>
      <span
        class="flex-1"
      >
        Settings
      </span>
    </a>
  </div>
</aside>
`;

exports[`SideNav (Cliff Cyberdeck rail) > snapshots the rendered SideNav with Settings active 1`] = `
<aside
  class="flex flex-col w-[248px] shrink-0 sticky top-0 h-screen self-start z-10"
  style="background: var(--cd-bg-1); border-right: 1px solid var(--cd-rule);"
>
  <a
    aria-label="Cliff home"
    class="block px-[18px] pt-[18px] pb-[12px] focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
    data-discover="true"
    href="/dashboard"
    style="border-bottom: 1px solid var(--cd-rule);"
  >
    <span
      class="inline-flex items-baseline gap-[1px]"
      style="line-height: 1;"
    >
      <span
        class="font-display"
        style="font-size: 22px; font-weight: 700; letter-spacing: -0.045em; color: var(--cd-green); text-shadow: 0 0 14px var(--cd-green-glow);"
      >
        cliff
      </span>
      <span
        aria-hidden="true"
        class="cd-pulse ml-[3px]"
        style="width: 5px; height: 5px; background: var(--cd-green); box-shadow: 0 0 8px var(--cd-green);"
      />
    </span>
    <div
      style="margin-top: 6px; font-size: 11px; color: var(--cd-fg-4); line-height: 1.2;"
    >
      self-hosted security copilot
    </div>
  </a>
  <div
    class="px-[14px] pt-[14px] pb-[10px]"
  >
    <div
      class="cd-section-label cd-section-label--quiet"
      style="margin-bottom: 6px;"
    >
      Current scope
    </div>
    <button
      aria-label="Workspace: linear/billing"
      class="w-full flex items-center gap-2 px-2.5 py-2 text-left transition-colors hover:bg-cd-card-hov focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      style="background: var(--cd-card); border: 1px solid var(--cd-rule); color: var(--cd-cyan); font-family: var(--cd-mono); font-size: 11.5px; border-radius: 2px;"
      title="linear/billing"
      type="button"
    >
      <span
        data-testid="sidenav-repo-initials"
        style="color: var(--cd-fg-4);"
      >
        ::
      </span>
      <span
        class="truncate"
      >
        linear/billing
      </span>
      <span
        aria-hidden="true"
        class="material-symbols-outlined ml-auto"
        style="font-size: 14px; color: var(--cd-fg-4);"
      >
        expand_more
      </span>
    </button>
  </div>
  <nav
    aria-label="Primary"
    class="flex-1 min-h-0 overflow-y-auto px-2 flex flex-col gap-px"
  >
    <a
      class="cd-nav  focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      data-discover="true"
      href="/dashboard"
    >
      <span
        aria-hidden="true"
        class="material-symbols-outlined"
        style="font-size: 15px; font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;"
      >
        space_dashboard
      </span>
      <span
        class="flex-1"
      >
        Dashboard
      </span>
    </a>
    <a
      class="cd-nav  focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      data-discover="true"
      href="/issues"
    >
      <span
        aria-hidden="true"
        class="material-symbols-outlined"
        style="font-size: 15px; font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;"
      >
        task_alt
      </span>
      <span
        class="flex-1"
      >
        Issues
      </span>
      <span
        class="font-mono font-bold"
        data-testid="sidenav-issues-badge"
        style="font-size: 10px; color: var(--cd-fg-4); text-shadow: none;"
      >
        60
      </span>
    </a>
  </nav>
  <div
    data-testid="sidenav-footer"
    style="border-top: 1px solid var(--cd-rule); padding: 6px 8px;"
  >
    <a
      aria-current="page"
      class="cd-nav cd-nav--active focus-visible:outline-none focus-visible:outline focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-[var(--cd-green)]"
      data-discover="true"
      href="/settings"
    >
      <span
        aria-hidden="true"
        class="material-symbols-outlined"
        style="font-size: 15px; font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;"
      >
        settings
      </span>
      <span
        class="flex-1"
      >
        Settings
      </span>
    </a>
  </div>
</aside>
`;
